--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
-body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+* {
     margin: 0;
     padding: 0;
+}
+
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
   
   header {
@@ -9,6 +12,7 @@ body {
     color: #fff;
     padding: 20px;
     text-align: center;
+
   }
   
   h1 {
@@ -40,3 +44,16 @@ body {
     text-align: center;
     margin-top: 20px;
   }
+
+  .imagenChiquita {
+    width: 30vw;
+    padding-top: 2cm;
+    padding-right: 2cm;
+    padding-left: 2cm;
+  }
+
+  .contenedor { 
+    display: flex;
+
+
+   }
