--- a/css/historialSiniestro.css
+++ b/css/historialSiniestro.css
@@ -44,8 +44,14 @@ body {
     color: #fff;
     padding: 20px;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 0px;
   }
+  .footer-bomberos{
+    margin-top: 20px;
+    background-color:rgb(75, 28, 28) ;
+    
+  }
+
 
   .imagenChiquita {
     width: 30vw;
