--- a/css/login.css
+++ b/css/login.css
@@ -71,9 +71,11 @@ body {
  .contenedor-login{
   width: 500px;
   height: 400px;
-  background-color:#333 ;
+  background-color:#f5f5f5 ;
   margin-left: 400px;
   margin-top: 30px;
+  border: solid 2px rgb(158, 88, 88);
+
  } 
  .contenedor h1{
   margin: 20px;
@@ -89,6 +91,9 @@ body {
   border-radius: 2px;
   
  }
+ input:hover{
+  background-color:rgb(204, 192, 192);
+ }
  .input-1{
   margin-left: 80px;
  }
@@ -100,6 +105,7 @@ body {
  label{
   margin-left: 20px;
   color: black;
+  font-weight: 700;
  }
 
  .label-2{
