mejorando acceso del foter

--- a/css/styles.css
+++ b/css/styles.css
@@ -78,11 +78,10 @@ footer {
 }
 
 .img-container{
+  object-position: left;
   width: 75px;
   height: 75px;
   display: flex;
   margin: 3px;
-  margin-right: 100%;
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
+
 }
