--- a/css/styles.css
+++ b/css/styles.css
@@ -78,10 +78,10 @@ footer {
 }
 
 .img-container{
-  object-position: left;
-  width: 75px;
-  height: 75px;
+  object-position: right;
+  width: 40px;
+  height: 40px;
   display: flex;
   margin: 3px;
-
+  display: inline-block;
 }
