--- a/css/historialSiniestro.css
+++ b/css/historialSiniestro.css
@@ -68,3 +68,20 @@ body {
     background-color: rgb(255, 255, 255);
     height: 370px;
 }
+
+table{border-collapse:collapse; margin-top: 4px; margin-left: 4px;}
+th,tr,td{
+	border:1px solid #000;
+	width:150px;
+	height:45px;
+	vertical-align:middle;
+	text-align:center;
+}
+th{
+	color:#fff;
+	background-color: #252525;
+}
+
+tr:nth-child(odd) td{
+	background-color:#eee;
+}
