--- a/css/inventario.css
+++ b/css/inventario.css
@@ -67,3 +67,22 @@ body {
     background-color: rgb(255, 255, 255);
     height: 370px;
 }
+
+
+.header-titulo-img {
+  display: flex;
+  
+}
+.div-header-titulo{
+  text-align: left;
+  margin-left:40px;
+  margin-right: 20px;
+  margin-top: 30px;
+}
+span{
+  font-weight: 600;
+}
+.div-header-img{
+  margin-left: 400px;
+  
+}
