--- a/css/login.css
+++ b/css/login.css
@@ -118,6 +118,23 @@ body {
  }
  
  
+.header-titulo-img {
+  display: flex;
+  
+}
+.div-header-titulo{
+  text-align: left;
+  margin-left:40px;
+  margin-right: 20px;
+  margin-top: 30px;
+}
+span{
+  font-weight: 600;
+}
+.div-header-img{
+  margin-left: 400px;
+  
+}
 
 
  
