--- a/css/personal.css
+++ b/css/personal.css
@@ -85,7 +85,12 @@ span{
   margin-left: 400px;
 }
 
-table{border-collapse:collapse; margin-top: 4px; margin-left: 4px;}
+table{
+  border-collapse:collapse; 
+  margin-top: 4px; 
+  margin-left: 4px;
+}
+
 th,tr,td{
 	border:1px solid #000;
 	width:175px;
