--- a/css/login.css
+++ b/css/login.css
@@ -71,10 +71,11 @@ body {
  .contenedor-login{
   width: 500px;
   height: 400px;
-  background-color:#f5f5f5 ;
+  background-color:#330101 ;
   margin-left: 400px;
   margin-top: 30px;
-  border: solid 2px rgb(158, 88, 88);
+  border-radius: 30px;
+  color: white;
 
  } 
  .contenedor h1{
@@ -104,7 +105,7 @@ body {
  }
  label{
   margin-left: 20px;
-  color: black;
+  color: rgb(255, 255, 255);
   font-weight: 700;
  }
 
