Cuadro de inventario

--- a/css/inventario.css
+++ b/css/inventario.css
@@ -86,3 +86,24 @@ span{
   margin-left: 400px;
   
 }
+table{border-collapse:collapse; margin-top: 4px; margin-left: 150px;}
+
+table{border-collapse:collapse; margin-top: 4px; margin-left: 5px;}
+
+table{border-collapse:collapse; margin-top: 4px; margin-left: 5px;}
+
+th,tr,td{
+	border:1px solid #000;
+	width:150px;
+	height:45px;
+	vertical-align:middle;
+	text-align:center;
+}
+th{
+	color:#fff;
+	background-color: #252525;
+}
+
+tr:nth-child(odd) td{
+	background-color:#eee;
+}
