--- a/css/styles.css
+++ b/css/styles.css
@@ -11,13 +11,13 @@ header {
   background-color: rgb(75, 28, 28);
   color: #fff;
   padding: 20px;
- 
+  text-align: center;
 
 }
   
 h1 {
   font-size: 36px;
-  margin: 10px 0;
+  margin: 0;
 }
   
 p {
@@ -59,7 +59,7 @@ footer {
   padding-left: 2cm;
   filter: drop-shadow(10px 10px 5px rgb(190, 190, 190));
 }
-.texto-info{
+.lorem-texto-info{
   margin-top: 90px;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -72,15 +72,16 @@ footer {
   
 }
 .div-header-titulo{
-  margin-left:40px;
-  margin-right: 20px;
+  margin-left: 400px;
+  margin-right: 40px;
   margin-top: 20px;
 }
 
-span{
-  font-weight: 600;
-}
-.div-header-img{
-  margin-left: 400px;
-  
+.img-container{
+  object-position: right;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  margin: 3px;
+  display: inline-block;
 }
