--- a/AngularBomberos/src/app/pages/login/login.component.html
+++ b/AngularBomberos/src/app/pages/login/login.component.html
@@ -1,1 +1,7 @@
 <p>login works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-4"></div>
+        <div class="col-8"></div>
+
+</div>
