--- a/AngularBomberos/src/app/pages/inventario/inventario.component.html
+++ b/AngularBomberos/src/app/pages/inventario/inventario.component.html
@@ -1,1 +1,44 @@
-<p>inventario works!</p>
+<div class="contenedor">
+  <table>
+    <tr>
+      <th>Objeto</th>
+      <th>Ubicacion</th>
+      <th>Capacidad (agua)</th>
+      <th>Capacidad (gente)</th>
+      <th>cantidad</th>
+      <th>Ultimo Mantenimiento</th>
+      <th>Ultimo Uso</th>
+      <th>ID_CODE</th>
+    </tr>
+    <tr>
+      <td>Camion Bomba. Volvo, modelo 2007</td>
+      <td>Garaje 3</td>
+      <td>1000L</td>
+      <td>5-3 personas</td>
+      <td>2 Unidades</td>
+      <td>15/Marzo/2022</td>
+      <td>25/Abril/2023</td>
+      <td>CAR_01</td>
+    </tr>
+    <tr>
+      <td>Manguera Manga Entelada 3 Pulgada 20 Metros Tipo Bombero</td>
+      <td>ALmacen 1</td>
+      <td>-</td>
+      <td>-</td>
+      <td>57 Unidades</td>
+      <td>17/febrero/2023</td>
+      <td>27/junio/2023</td>
+      <td>TOOL_56_2</td> 
+    </tr>
+    <tr>
+      <td>camión Bomba 4x4 Mercedes Benz 1017</td>
+      <td>Garaje 2</td>
+      <td>3000L</td>
+      <td>7-5 personas</td>
+      <td>1 Unidad</td>
+      <td>25/julio/2020</td>
+      <td>25/abril/2023</td>
+      <td>CAR_03</td> 
+    </tr>
+  </table>
+</div> 
