--- a/AngularBomberos/src/app/shared/header/header.component.html
+++ b/AngularBomberos/src/app/shared/header/header.component.html
@@ -1,20 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <header class="header-titulo-img">
-        <div class="div-header-img">
-          <img class="img-logo" src="./img/bomberos logo .png" width="100px" alt="XD">
-        </div>
-        <div class="div-header-titulo">
-          <h1>Bomberos La Falda </h1>
-          <p>Aplicación web para la administración de datos.</p>
-        </div>  
-    </header>
-</body>
-</html>
+
+<div class="header-titulo-img">
+  <div class="div-header-img">
+    <img class="img-logo" src="./img/bomberos logo .png" width="100px" alt="XD">
+  </div>
+  <div class="div-header-titulo">
+    <h1>Bomberos La Falda </h1>
+    <p>Aplicación web para la administración de datos.</p>
+  </div>  
+</div>  
+
