--- a/AngularBomberos/src/app/pages/ingresar-siniestro/ingresar-siniestro.component.html
+++ b/AngularBomberos/src/app/pages/ingresar-siniestro/ingresar-siniestro.component.html
@@ -3,64 +3,58 @@
         <div class="col">
             <form class="row g-3 needs-validation" novalidate>
                 <div class="col-md-4">
-                <label for="validationCustom01" class="form-label">First name</label>
-                <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
+                <label for="validationCustom01" class="form-label">Fecha</label>
+                <input type="text" class="form-control" id="validationCustom01" value="" required>
                 <div class="valid-feedback">
-                    Looks good!
                 </div>
                 </div>
                 <div class="col-md-4">
-                <label for="validationCustom02" class="form-label">Last name</label>
-                <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
+                <label for="validationCustom02" class="form-label">Hora</label>
+                <input type="text" class="form-control" id="validationCustom02" value="" required>
                 <div class="valid-feedback">
-                    Looks good!
                 </div>
                 </div>
                 <div class="col-md-4">
-                <label for="validationCustomUsername" class="form-label">Username</label>
+                <label for="validationCustomUsername" class="form-label">Dirección</label>
                 <div class="input-group has-validation">
-                    <span class="input-group-text" id="inputGroupPrepend">@</span>
+                    <span class="input-group-text" id="inputGroupPrepend"></span>
                     <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-                    <div class="invalid-feedback">
-                    Please choose a username.
+                    <div class="invalid-feedback"> 
                     </div>
                 </div>
                 </div>
                 <div class="col-md-6">
-                <label for="validationCustom03" class="form-label">City</label>
+                <label for="validationCustom03" class="form-label">Sector</label>
                 <input type="text" class="form-control" id="validationCustom03" required>
                 <div class="invalid-feedback">
-                    Please provide a valid city.
                 </div>
                 </div>
                 <div class="col-md-3">
                 <label for="validationCustom04" class="form-label">State</label>
                 <select class="form-select" id="validationCustom04" required>
-                    <option selected disabled value="">Choose...</option>
-                    <option>...</option>
+                    <option selected disabled value="">Localidad </option>
+                    <option>Valle Hermoso</option>
+                    <option>La Falda</option>
+                    <option>Huerta Grande</option>
                 </select>
-                <div class="invalid-feedback">
-                    Please select a valid state.
-                </div>
                 </div>
                 <div class="col-md-3">
-                <label for="validationCustom05" class="form-label">Zip</label>
+                <label for="validationCustom05" class="form-label">Tipo de Siniestro</label>
                 <input type="text" class="form-control" id="validationCustom05" required>
-                <div class="invalid-feedback">
-                    Please provide a valid zip.
                 </div>
-                </div>
-                <div class="col-12">
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                    <label class="form-check-label" for="invalidCheck">
-                    Agree to terms and conditions
-                    </label>
-                    <div class="invalid-feedback">
-                    You must agree before submitting.
+                <div class="col-md-3">
+                    <label for="validationCustom05" class="form-label">Personal</label>
+                    <input type="text" class="form-control" id="validationCustom05" required>
                     </div>
-                </div>
-                </div>
+                <div class="col-md-3">
+                    <label for="validationCustom05" class="form-label">Inventario</label>
+                    <input type="text" class="form-control" id="validationCustom05" required>
+                    </div>
+                <div class="mb-3">
+                        <label for="exampleFormControlTextarea1" class="form-label">Descripción</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                      </div>
+                
                 <div class="col-12">
                 <button class="btn btn-primary" type="submit">Submit form</button>
                 </div>
