--- a/AngularBomberos/src/app/shared/footer/footer.component.css
+++ b/AngularBomberos/src/app/shared/footer/footer.component.css
@@ -6,17 +6,27 @@ p {
   font-size: 18px;
   margin: 10px 0;
 }
-footer {
-  background-color: #333;
-  color: #fff;
-  padding: 20px;
-  text-align: center;
-  margin-top: 0px;
-  
-}
 
-.footer-bomberos{
-  margin-top: 70px;
-  background-color:rgb(75, 28, 28) ;
+.img-container{
+    object-position: right;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    margin: 3px;
+    display: inline-block;
+  }
   
-}
+  .footer-bomberos{
+    margin-top: 70px;
+    background-color:rgb(75, 28, 28) ;
+    
+  }
+  
+  .footer-parafo {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    margin-top: 0px;
+    
+  }
