--- a/AngularBomberos/src/app/pages/login/login.component.html
+++ b/AngularBomberos/src/app/pages/login/login.component.html
@@ -1,24 +1,21 @@
-<<<<<<< Updated upstream
-<p>login works!</p>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-4"></div>
-        <div class="col-8"></div>
-
-</div>
-=======
-
-<div class="contenedor">
-    <div class="contenedor-login">
-      <h1>LOGIN</h1>
-      <form action="">
-        <Label class="">Gmail: </Label>
-        <input class="input-1" type="text"><br>
-        <label class="label-2">password: </label>
-        <input class="input-2" type="password">
-        <button>iniciar sesion</button>
-      </form>
+        <div class="col-4">
+          <div class="contenedor">
+            <div class="contenedor-login">
+              <h1>LOGIN</h1>
+              <form action="">
+                <Label class="">Gmail: </Label>
+                <input class="input-1" type="text"><br>
+                <label class="label-2">password: </label>
+                <input class="input-2" type="password">
+                <button>iniciar sesion</button>
+              </form>
+            </div>
+        </div> 
+        </div>
     </div>
-</div>  
+</div>
 
->>>>>>> Stashed changes
+ 
+
