--- a/AngularBomberos/src/app/pages/registro/registro.component.html
+++ b/AngularBomberos/src/app/pages/registro/registro.component.html
@@ -1,18 +1,24 @@
-
-<div class="contenedor">
-    <div class="contenedor-login">
-      <h1>REGISTRO</h1>
-      <form action="">
-        <Label class="">Nombre: </Label>
-        <input class="input-1" type="text"><br>
-        <label class="label-2">DNI: </label>
-        <input class="input-2" type="number"><br>
-        <Label class="">Rango: </Label>
-        <input class="input-3" type="text"><br>
-        <label class="label-2">password: </label>
-        <input class="input-4" type="password">
-        <button>iniciar sesion</button>
-      </form>
-    </div>
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-4">
+        <div class="contenedor">
+          <div class="contenedor-login">
+            <h1>REGISTRO</h1>
+            <form action="">
+              <Label class="">Nombre: </Label>
+              <input class="input-1" type="text"><br>
+              <label class="label-2">DNI: </label>
+              <input class="input-2" type="number"><br>
+              <Label class="">Rango: </Label>
+              <input class="input-3" type="text"><br>
+              <label class="label-2">password: </label>
+              <input class="input-4" type="password">
+              <button>iniciar sesion</button>
+            </form>
+          </div>
+      </div> 
+      </div>
+  </div>
 </div>  
+ 
 
