--- a/AngularBomberos/src/app/pages/ingresar-siniestro/ingresar-siniestro.component.html
+++ b/AngularBomberos/src/app/pages/ingresar-siniestro/ingresar-siniestro.component.html
@@ -56,7 +56,7 @@
                       </div>
                 
                 <div class="col-12">
-                <button class="btn btn-primary" type="submit">Submit form</button>
+                <button class="btn btn-primary" type="submit">Enviar</button>
                 </div>
             </form>
         </div>
