--- a/AngularBomberos/src/app/pages/personal/personal.component.html
+++ b/AngularBomberos/src/app/pages/personal/personal.component.html
@@ -1,2 +1,20 @@
+
 <div class="contenedor">
-</div> 
+    <table>
+        <tr>
+            <th>Foto Carnet</th>
+            <th>Nombre y Apellido</th>
+            <th>Rango</th>
+            <th>Estado Actividad</th>
+            <th>Estado Vigencia</th>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+</div>
+
