--- a/AngularBomberos/src/app/pages/ingresar-siniestro/ingresar-siniestro.component.html
+++ b/AngularBomberos/src/app/pages/ingresar-siniestro/ingresar-siniestro.component.html
@@ -30,7 +30,7 @@
                 </div>
                 </div>
                 <div class="col-md-3">
-                <label for="validationCustom04" class="form-label">State</label>
+                <label for="validationCustom04" class="form-label">Localidad</label>
                 <select class="form-select" id="validationCustom04" required>
                     <option selected disabled value="">Localidad </option>
                     <option>Valle Hermoso</option>
