--- a/AngularBomberos/src/app/shared/navbar/navbar.component.html
+++ b/AngularBomberos/src/app/shared/navbar/navbar.component.html
@@ -1,10 +1,6 @@
 <nav>
-    <a href="#" style="color: rgb(196, 192, 192)";>Inicio</a>
-    <a routerLink='/tutorial'>Tutorial</a>
-    <a routerLink='/login'>Login</a>
-    <a href="./html/inventario.html">Inventario</a>
-    <a href="./html/personal.html">Personal</a>
-    <a href="./html/login.html">Login</a>
-    <a href="./html/registro.html">Registro</a>
-    <a href="./html/tutorial.html">Tutorial</a>
+   
+    <a class="nav-link"  routerLink='/tutorial'>Tutorial</a>
+    <a  class="nav-link" routerLink='/login'>Login</a>
+   
 </nav>
