--- a/AngularBomberos/src/app/app.component.html
+++ b/AngularBomberos/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-navbar></app-navbar>
+<app-header></app-header>
 
-  <router-outlet></router-outlet>
+<router-outlet></router-outlet>
 
 <app-footer></app-footer>
 
