--- a/AngularBomberos/src/app/pages/home/home.component.html
+++ b/AngularBomberos/src/app/pages/home/home.component.html
@@ -1,7 +1,11 @@
-<div class="contenedor">
-    <img src="img/bomberoslafalda.jpg" alt="" class="imagenChiquita">
+<div class="header-titulo-img row">
+  <div class="contenedor col-md-4">
+    <img src="./assets/img/Bomberos imagen.jpg" alt="" class="imagenChiquita">
+  </div>
 
-    <p class="texto-info"><span> 7 DE AGOSTO DE 1969 62 AÑOS AL SERVICIO DE LA COMUNIDAD , LA FALDA- CORDOBA</span> <br>
+  <div class="div-header-titulo col-md-8">
+    <p class="texto-info col-md-8"><span> 7 DE AGOSTO DE 1969 62 AÑOS AL SERVICIO DE LA COMUNIDAD , LA FALDA- CORDOBA</span> <br>
       El cuerpo de bomberos de La Falda realiza capacitaciones para voluntarios, en tierra, a la hora de apagar incendios ya sean forestales o estructurales, y en agua capacitaciones para rescates. Estas capacitaciones se emplean en conjunto con otras centrales. También trabajan colaborativamente cunto a otros cuarteles cuando ocurre un siniestro utilizando nuestros equipamientos. Además de esto ayudan a nuestra comunidad local ante alertas meteorológicas.
     </p>
+  </div>
 </div>
