--- a/AngularBomberos/src/app/pages/registro/registro.component.html
+++ b/AngularBomberos/src/app/pages/registro/registro.component.html
@@ -11,9 +11,9 @@
               <input class="input-2" type="number"><br>
               <Label class="">Rango: </Label>
               <input class="input-3" type="text"><br>
-              <label class="label-2">password: </label>
+              <label class="label-2">Contraseña: </label>
               <input class="input-4" type="password">
-              <button>iniciar sesion</button>
+              <button>Registrar</button>
             </form>
           </div>
       </div> 
