--- a/AngularBomberos/src/app/shared/footer/footer.component.html
+++ b/AngularBomberos/src/app/shared/footer/footer.component.html
@@ -2,17 +2,14 @@
     <div class="row">
         <div class="col">    
             <section class="footer-bomberos">
-                <p>Numero de emergencia: 100</p>
-                <p>telefono: +54 03548 42-2631</p>
+            <div>    
+                <a href="https://www.instagram.com/bomberos_lafalda/?hl=es"  target="_blank"><img class="img-container" src="./assets/img/Instagram.PNG"></a>
+                <a href="https://www.facebook.com/people/Bomberos-Voluntarios-La-Falda/100090244821628/?locale=hi_es"  target="_blank"><img class="img-container" src="./assets/img/facebook.png"></a>
+                
+            </div> 
+            <p>Numero de emergencia: 100</p>
+            <p>Telefono: +54 03548 42-2631</p>
             </section>
-        </div>
-        <div class="row">
-            <div class="col">  
-                <section>
-                    <a href="https://www.instagram.com/bomberos_lafalda/?hl=es"  target="_blank"><img class="img-container" src="AngularBomberos\src\assets\img\Instagram.PNG"></a>
-                    <a href="https://www.facebook.com/people/Bomberos-Voluntarios-La-Falda/100090244821628/?locale=hi_es"  target="_blank"><img class="img-container" src="AngularBomberos\src\assets\img\facebook.png"></a>
-                </section>
-            </div>
         </div>
         <div class="row">
             <div class="col">
