--- a/AngularBomberos/src/app/shared/navbar/navbar.component.html
+++ b/AngularBomberos/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,13 @@
 <nav>
    
+    <a  class="nav-link" routerLink='/home'>Home</a>
+    <a  class="nav-link" routerLink='/historial-siniestro'>Historial Siniestro</a>
+    <a  class="nav-link" routerLink='/ingresar-siniestro'>Ingresar Siniestro</a>
+    <a  class="nav-link" routerLink='/inventario'>Inventario</a>
+    <a  class="nav-link" routerLink='/personal'>Personal</a>
     <a class="nav-link"  routerLink='/tutorial'>Tutorial</a>
+    <a  class="nav-link" routerLink='/registro'>Registro</a>
     <a  class="nav-link" routerLink='/login'>Login</a>
+
    
 </nav>
