--- a/AngularBomberos/src/app/pages/ingresar-siniestro/ingresar-siniestro.component.html
+++ b/AngularBomberos/src/app/pages/ingresar-siniestro/ingresar-siniestro.component.html
@@ -4,13 +4,13 @@
             <form class="row g-3 needs-validation" novalidate>
                 <div class="col-md-4">
                 <label for="validationCustom01" class="form-label">Fecha</label>
-                <input type="text" class="form-control" id="validationCustom01" value="" required>
+                <input type="date" class="form-control" id="validationCustom01" value="" required>
                 <div class="valid-feedback">
                 </div>
                 </div>
                 <div class="col-md-4">
                 <label for="validationCustom02" class="form-label">Hora</label>
-                <input type="text" class="form-control" id="validationCustom02" value="" required>
+                <input type="time" class="form-control" id="validationCustom02" value="" required>
                 <div class="valid-feedback">
                 </div>
                 </div>
