--- a/AngularBomberos/src/app/pages/personal/personal.component.css
+++ b/AngularBomberos/src/app/pages/personal/personal.component.css
@@ -1,8 +1,108 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
-.contenedor { 
-  display: flex;
 
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+header {
+  background-color: rgb(75, 28, 28);
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+
+}
+
+h1 {
+  font-size: 36px;
+  margin: 0;
+}
+
+p {
+  font-size: 18px;
+  margin: 10px 0;
+}
+
+nav {
+  background-color: rgb(116, 60, 60);
+  padding: 10px;
+  text-align: center;
+  
+
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 10px;
+}
+
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  margin-top: 0px;
+}
+.footer-bomberos{
+  margin-top: 20px;
+  background-color:rgb(75, 28, 28) ;
+  
+}
+
+.imagenChiquita {
+  width: 30vw;
+  padding-top: 2cm;
+  padding-right: 2cm;
+  padding-left: 2cm;
+  filter: drop-shadow(10px 10px 5px rgb(190, 190, 190));
+}
+.lorem-texto-info{
+  margin-top: 90px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.contenedor{
+  background-color: rgb(255, 255, 255);
+  height: 370px;
+}
+
+.header-titulo-img {
+display: flex;
+
+}
+.div-header-titulo{
+text-align: left;
+margin-left:40px;
+margin-right: 20px;
+margin-top: 30px;
+}
+span{
+font-weight: 600;
+}
+.div-header-img{
+margin-left: 400px;
+}
+
+table{
+border-collapse:collapse; 
+margin-top: 4px; 
+margin-left: 4px;
+}
+
+th,tr,td{
+border:1px solid #000;
+width:175px;
+height:45px;
+vertical-align:middle;
+text-align:center;
+}
+th{
+color:#fff;
+background-color: #252525;
+}
+
+tr:nth-child(odd) td{
+background-color:#eee;
 }
