--- a/AngularBomberos/src/app/shared/footer/footer.component.css
+++ b/AngularBomberos/src/app/shared/footer/footer.component.css
@@ -6,6 +6,8 @@
 p {
   font-size: 18px;
   margin: 10px 0;
+  color: rgb(238, 226, 226);
+  margin-left: 0px;
 }
 
 .img-container{
@@ -20,6 +22,7 @@ p {
 .footer-bomberos{
   margin-top: 70px;
   background-color:rgb(75, 28, 28) ;
+  display: flex;
   
 }
 
