--- a/AngularBomberos/src/app/shared/header/header.component.html
+++ b/AngularBomberos/src/app/shared/header/header.component.html
@@ -1,11 +1,11 @@
 
-<div class="header-titulo-img">
-  <div class="div-header-img">
-    <img class="img-logo" src="./img/bomberos logo .png" width="100px" alt="XD">
+<div class="header-titulo-img row">
+  <div class="div-header-img col-md-2">
+    <img class="img-logo" src="./assets/img/bomberos logo .png" width="100px" alt="XD">
   </div>
-  <div class="div-header-titulo">
-    <h1>Bomberos La Falda </h1>
+  <div class="div-header-titulo col-md-8">
+    <h1>Bomberos La Falda</h1>
     <p>Aplicación web para la administración de datos.</p>
   </div>  
-</div>  
+</div>
 
