--- a/AngularBomberos/src/app/shared/header/header.component.html
+++ b/AngularBomberos/src/app/shared/header/header.component.html
@@ -1,7 +1,6 @@
-
 <div class="header-titulo-img row">
   <div class="div-header-img col-md-2">
-    <img class="img-logo" src="./assets/img/bomberos logo .png" width="100px" alt="XD">
+    <img class="img-logo" src="./assets/img/Bomberos logo.png" width="100px" alt="XD">
   </div>
   <div class="div-header-titulo col-md-8">
     <h1>Bomberos La Falda</h1>
