--- a/AngularBomberos/src/app/pages/login/login.component.html
+++ b/AngularBomberos/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-4">
+        <div class="col">
           <div class="contenedor">
             <div class="contenedor-login">
               <h1>LOGIN</h1>
@@ -12,9 +12,9 @@
                 <button>iniciar sesion</button>
               </form>
             </div>
-        </div> 
+          </div> 
         </div>
-    </div>
+      </div>
 </div>
 
  
