--- a/AngularBomberos/src/app/pages/registro/registro.component.css
+++ b/AngularBomberos/src/app/pages/registro/registro.component.css
@@ -1,38 +1,74 @@
-* {
-    margin: 0;
-    padding: 0;
+
+.contenedor-login{
+width: 600px;
+height: 500px;
+background-color:#330101 ;
+margin-left: 400px;
+margin-top: 30px;
+border: solid 2px rgb(68, 67, 67);
+border-radius: 20px;
+
+} 
+.contenedor-login h1{
+color: #dedede;
+}
+.contenedor-login button{
+padding: 15px ;
+margin-left: 60%;
+font-family: inherit;
+padding-left: 40px;
+padding-right: 40px;
+margin-top: 20px;
+border-radius: 9px;
+
+}
+.contenedor h1{
+margin: 20px;
+text-align: center;
 }
 
-body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-  
-  h1 {
-    font-size: 36px;
-    margin: 0;
-  }
-  
-  p {
-    font-size: 18px;
-    margin: 10px 0;
-  }
-  
-  .contenedor { 
-    display: flex;
+.contenedor input{
+width: 50%;
+padding: 10px;
+margin-bottom: 10px;
+background-color: #fafafa;
+border: 1px solid #dedede;
+border-radius: 2px;
 
-   }
+}
+input:hover{
+background-color:rgb(204, 192, 192);
+}
 
- .contenedor-login{
-  width: 500px;
-  height: 400px;
-  background-color:#330101 ;
-  margin-left: 400px;
-  margin-top: 30px;
-  border-radius: 30px;
-  color: white;
 
- } 
- .contenedor h1{
-  margin: 20px;
-  text-align: center;
- }
+
+label{
+margin-left: 20px;
+color: rgb(245, 242, 242);
+font-weight: 700;
+}
+
+.label-2{
+margin-left: 20px;
+margin-right: -20px;
+
+}
+form{
+margin-top: 60px;
+}
+.input-3 {
+  margin-left: 80px;
+  margin-top: 20px;
+}
+.input-4 {
+  margin-left: 69px;
+  margin-top: 20px;
+}
+.input-2 {
+  margin-left: 120px;
+  margin-top: 20px;
+}
+.input-1{
+  margin-left: 70px;
+  }
+   
