--- a/AngularBomberos/src/app/pages/registro/registro.component.html
+++ b/AngularBomberos/src/app/pages/registro/registro.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-      <div class="col-4">
+    <div class="col">
         <div class="contenedor">
           <div class="contenedor-login">
             <h1>REGISTRO</h1>
@@ -16,7 +16,7 @@
               <button>Registrar</button>
             </form>
           </div>
-      </div> 
+        </div> 
       </div>
   </div>
 </div>  
