--- a/AngularBomberos/src/app/pages/ingresar-siniestro/ingresar-siniestro.component.html
+++ b/AngularBomberos/src/app/pages/ingresar-siniestro/ingresar-siniestro.component.html
@@ -1,64 +1,99 @@
-<div class="container-fluid" >
-    <div class="row">
-        <div class="col">
-            <form class="row g-3 needs-validation" novalidate>
-                <div class="col-md-4">
-                <label for="validationCustom01" class="form-label">Fecha</label>
-                <input type="date" class="form-control" id="validationCustom01" value="" required>
-                <div class="valid-feedback">
-                </div>
-                </div>
-                <div class="col-md-4">
-                <label for="validationCustom02" class="form-label">Hora</label>
-                <input type="time" class="form-control" id="validationCustom02" value="" required>
-                <div class="valid-feedback">
-                </div>
-                </div>
-                <div class="col-md-4">
-                <label for="validationCustomUsername" class="form-label">Dirección</label>
-                <div class="input-group has-validation">
-                    <span class="input-group-text" id="inputGroupPrepend"></span>
-                    <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-                    <div class="invalid-feedback"> 
-                    </div>
-                </div>
-                </div>
-                <div class="col-md-6">
-                <label for="validationCustom03" class="form-label">Sector</label>
-                <input type="text" class="form-control" id="validationCustom03" required>
-                <div class="invalid-feedback">
-                </div>
-                </div>
-                <div class="col-md-3">
-                <label for="validationCustom04" class="form-label">Localidad</label>
-                <select class="form-select" id="validationCustom04" required>
-                    <option selected disabled value="">Localidad </option>
-                    <option>Valle Hermoso</option>
-                    <option>La Falda</option>
-                    <option>Huerta Grande</option>
-                </select>
-                </div>
-                <div class="col-md-3">
-                <label for="validationCustom05" class="form-label">Tipo de Siniestro</label>
-                <input type="text" class="form-control" id="validationCustom05" required>
-                </div>
-                <div class="col-md-3">
-                    <label for="validationCustom05" class="form-label">Personal</label>
-                    <input type="text" class="form-control" id="validationCustom05" required>
-                    </div>
-                <div class="col-md-3">
-                    <label for="validationCustom05" class="form-label">Inventario</label>
-                    <input type="text" class="form-control" id="validationCustom05" required>
-                    </div>
-                <div class="mb-3">
-                        <label for="exampleFormControlTextarea1" class="form-label">Descripción</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                      </div>
-                
-                <div class="col-12">
-                <button class="btn btn-primary" type="submit">Enviar</button>
-                </div>
-            </form>
+<div class="container-fluid">
+
+    <form class="row g-3 needs-validation" novalidate>
+
+        <!-- PRIMERA FILA -->
+
+        <div class="col-md-1"></div>
+
+        <div class="col-md-2">
+            <label for="validationCustom01" class="form-label">Fecha</label>
+            <input type="date" class="form-control" id="validationCustom01" value="" required>
+            <div class="valid-feedback"></div>
         </div>
-    </div>
+
+        <div class="col-md-1"></div>
+
+        <div class="col-md-2">
+            <label for="validationCustom02" class="form-label">Hora</label>
+            <input type="time" class="form-control" id="validationCustom02" value="" required>
+            <div class="valid-feedback"></div>
+        </div>
+
+        <div class="col-md-1"></div>
+
+        <div class="col-md-3">
+            <label for="validationCustomUsername" class="form-label">Dirección</label>
+            <div class="input-group has-validation">
+                <span class="input-group-text" id="inputGroupPrepend"></span>
+                <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+                <div class="invalid-feedback"></div>
+            </div>
+        </div>
+
+        <div class="col-md-2"></div>
+
+        <!-- SEGUNDA FILA -->
+
+        <div class="col-md-1"></div>
+
+        <div class="col-md-4">
+            <label for="validationCustom03" class="form-label">Sector</label>
+            <input type="text" class="form-control" id="validationCustom03" required>
+            <div class="invalid-feedback"></div>
+        </div>
+
+        <div class="col-md-1"></div>
+
+        <div class="col-md-2">
+            <label for="validationCustom04" class="form-label">Localidad</label>
+            <select class="form-select" id="validationCustom04" required>
+                <option selected disabled value="">Localidad </option>
+                <option>Valle Hermoso</option>
+                <option>La Falda</option>
+                <option>Huerta Grande</option>
+            </select>
+        </div>
+
+        <div class="col-md-1"></div>
+
+        <div class="col-md-2">
+            <label for="validationCustom05" class="form-label">Tipo de Siniestro</label>
+            <input type="text" class="form-control" id="validationCustom05" required>
+        </div>
+
+        <div class="col-md-1"></div>
+
+        <!-- TERCERA FILA -->
+
+        <div class="col-md-1"></div>
+
+        <div class="col-md-3">
+            <label for="validationCustom05" class="form-label">Personal</label>
+            <input type="text" class="form-control" id="validationCustom05" required>
+        </div>
+
+        <div class="col-md-1"></div>
+
+        <div class="col-md-3">
+            <label for="validationCustom05" class="form-label">Inventario</label>
+            <input type="text" class="form-control" id="validationCustom05" required>
+        </div>
+
+        <div class="col-md-1"></div>
+
+        <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Descripción</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
+        </div>
+        <div class="col-md-1"></div>
+
+        <!-- PCUARTA FILA -->
+
+        <div class="col-1">
+            <button class="btn btn-primary" type="submit">Enviar</button>
+        </div>
+
+    </form>
+
 </div>
