--- a/AngularBomberos/src/app/shared/footer/footer.component.html
+++ b/AngularBomberos/src/app/shared/footer/footer.component.html
@@ -1,24 +1,24 @@
 <div class="container-fluid">
-    <div class="row">
-        <div class="col">    
-            <section class="footer-bomberos">
+    <div class="row footer-bomberos">
+        <div class="col aliniarIzquierda">   
             <div>    
-                 <a href="https://www.instagram.com/bomberos_lafalda/?hl=es"  target="_blank"><img class="img-container" src="./assets/img/Instagram.PNG"></a>
+                <a href="https://www.instagram.com/bomberos_lafalda/?hl=es"  target="_blank"><img class="img-container" src="./assets/img/Instagram.PNG"></a>
                 <a href="https://www.facebook.com/people/Bomberos-Voluntarios-La-Falda/100090244821628/?locale=hi_es"  target="_blank"><img class="img-container" src="./assets/img/facebook.png"></a>   
             </div> 
-            <p>Numero de emergencia: 100</p>
-            <p>Telefono: +54 03548 42-2631</p>
-            </section>
         </div>
-        <div class="row">
-            <div class="col">
-                <section class="footer-parafo">
-                    <p>&copy; 2023 Proa La Falda. Todos los derechos reservados.</p>
-                    <p>@escuelasproa.edu.ar</p>
-                </section>    
-                
-            <div class="col">    
-
+        <div class="col">  
+            <p>Numero de emergencia: 100</p>
+        </div>
+        <div class="col">
+            <p>Telefono: +54 03548 42-2631</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <section class="footer-parafo">
+                <p>&copy; 2023 Proa La Falda. Todos los derechos reservados.</p>
+                <p>@escuelasproa.edu.ar</p>
+            </section>    
         </div>
     </div>
 </div>
