--- a/AngularBomberos/src/app/pages/login/login.component.html
+++ b/AngularBomberos/src/app/pages/login/login.component.html
@@ -7,9 +7,9 @@
               <form action="">
                 <Label class="">Gmail: </Label>
                 <input class="input-1" type="text"><br>
-                <label class="label-2">password: </label>
+                <label class="label-2">Contraseña: </label>
                 <input class="input-2" type="password">
-                <button>iniciar sesion</button>
+                <button>Iniciar sesion</button>
               </form>
             </div>
           </div> 
