--- a/AngularBomberos/src/app/pages/tutorial/tutorial.component.html
+++ b/AngularBomberos/src/app/pages/tutorial/tutorial.component.html
@@ -1,2 +1,5 @@
-<div class="contenedor">
+<div class="header-titulo-img row">
+    <div class="contenedor col-md-12">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/YqBV2dqRv9g" frameborder="0" allowfullscreen></iframe>
+    </div> 
 </div> 
