Intento de frontend

--- a/AngularBomberos/src/app/pages/personal/personal.component.html
+++ b/AngularBomberos/src/app/pages/personal/personal.component.html
@@ -1,6 +1,6 @@
 
 <div class="contenedor">
-    <table>
+    <table id="dtUsuario">
         <tr>
             <th>Foto Carnet</th>
             <th>Nombre y Apellido</th>
