--- a/AngularBomberos/src/app/shared/navbar/navbar.component.html
+++ b/AngularBomberos/src/app/shared/navbar/navbar.component.html
@@ -8,6 +8,7 @@
     <a class="nav-link"  routerLink='/tutorial'>Tutorial</a>
     <a  class="nav-link" routerLink='/registro'>Registro</a>
     <a  class="nav-link" routerLink='/login'>Login</a>
+    <a  class="nav-link" routerLink='/crud'>Crud</a>
 
    
 </nav>
